Revision history for autodie

{{$NEXT}}

        * BUGFIX: Added support for 'chown', that was previously
          overlooked. Mad props to RsrchBoy for spotting this.
          (GH Pull #13)

        * BUGFIX: Removed executable bits from some bundled text files.

        * BUILD: We now use dzil to manage autodie.

        * TEST: Author tests now look for the AUTHOR_TESTING env
          variable (for dzil compliance).

2.13  Thu Nov  8 14:22:03 EST 2012
        * TEST: Deterministic tests in hints_pod_examples.t .
          (RT #80412, thanks to demerphq)

        * INTERNAL: subroutine installs are now done in a
          deterministic order. (RT #80414, thanks to demerphq)

2.12  Tue Jun 26 14:55:04 PDT 2012
        * BUGFIX: autodie now plays nicely with the 'open' pragma
        (RT #54777, thanks to Schwern).

        * BUILD: Updated to Module::Install 1.06

        * BUILD: Makefile.PL is less redundant.

        * TEST: t/pod-coverage.t no longer thinks LEXICAL_TAG is
          a user-visible subroutine.

2.11  Sat Mar 24 01:50:56 AUSEST 2012
        * DOCS: Explicitly documented that autodie is context
          unaware.  (Thanks to chromatic.)

        * TEST: Multi-arg open tests are skipped on VMS.
          (Thanks to Craig A. Berry.)

        * TEST BUGFIX recv.t shouldn't assume STDIN is a file handle.
          (Thanks to Todd Rinaldo)

        * TEST: Fixed compatibility with Carp 1.25.
          (Thanks to Olivier Mengué.)

        * INTERNAL: Exception classes are loaded more safely.
          (Thanks to Schwern)

2.10  Sat Feb 27 14:01:18 AUSEST 2010
        * BUGFIX: Fatal and autodie no longer leak Carp functions
          into the caller's namespace.  Thanks to Schwern.

        * TEST: Multi-arg open tests are really really skipped
          under Windows now.

        * DOCUMENTATION: Many more people are properly attributed
          in the 'AUTHORS' file.

2.09  Tue Feb 23 00:33:09 AUSEST 2010