@@ -2,6 +2,10 @@ Revision history for autodie
 
 {{$NEXT}}
 
+        * BUGFIX: Fixed bug whereby chmod, chown, kill, unlink and
+          utime could not throw an exception, even when they didn't
+          change all their files, or killed all their processes.
+
         * BUGFIX: Added support for 'chown', that was previously
           overlooked. Mad props to RsrchBoy for spotting this.
           (GH Pull #13)
@@ -12,6 +16,8 @@ Revision history for autodie
 
         * TEST: Author tests now look for the AUTHOR_TESTING env
           variable (for dzil compliance).
+
+        * TEST: Better testing for chown, chmod, and unlink.
 
 2.13  Thu Nov  8 14:22:03 EST 2012
         * TEST: Deterministic tests in hints_pod_examples.t .
